# wasm4-gol

./: .gitignore  Cargo.toml  Justfile  README.md  index.html
.github/workflows/: ci.yml  deploy.yml
assets/: song.yml
crates/wasm4-gol/: Cargo.toml
crates/wasm4-gol/src/: game.rs  game_cell.rs  lib.rs  logic.rs
crates/wasm4-stubs/: Cargo.toml
crates/wasm4-sx/: Cargo.toml
crates/wasm4-sx/src/: cell.rs  engine.rs  lib.rs  palette.rs  text.rs
crates/wasm4-sx/src/layers/: color.rs  draw_colors.rs  gamepad.rs  mod.rs  mouse.rs  palette.rs  screen.rs  text.rs
crates/wasm4-sx/src/music/: mod.rs
crates/wasm4-sx/src/tone/: adsr.rs  channel.rs  duty_cycle.rs  frequency_slide.rs  panning.rs  tone.rs  tone_flags.rs  volume.rs
crates/wasm4-sys/: Cargo.toml
doc/: crates.js  help.html  search-index.js  settings.html  source-files.js
doc/cart/: all.html  index.html
doc/wasm4_sx/: all.html  enum.DrawColorsIndex.html  enum.GamepadButton.html  enum.GamepadIndex.html  enum.MouseButton.html  enum.PaletteColor.html  enum.TextHorizontalAlignment.html  enum.TextVerticalAligment.html  index.html  sidebar-items.js  struct.Color.html  struct.DrawColors.html  struct.DrawColorsBuilder.html  struct.Engine.html  struct.FrameContext.html  struct.GamepadState.html  struct.MouseState.html  struct.Palette.html  struct.Text.html  struct.Vec2.html  struct.W4RefCell.html
src/: game.rs  game_cell.rs  lib.rs
tools/wasm4-tracker/: Cargo.toml
wasm4-gol/: Cargo.toml
wasm4-gol/src/: game.rs  game_cell.rs  lib.rs
wasm4-sx/: README.md
wasm4-tracker/: Cargo.toml
(+49 files in other folders)
