[package]
name = "cart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm4-sx = { path = "../wasm4-sx" }

[dev-dependencies]
wasm4-stubs = { path = "../wasm4-stubs" }
